# battlefield_respawn_notifier

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
src/battlefield_respawn_notifier/: __init__.py  config.ini.example  main.py
src/bf6_vehicle_respawn/: __init__.py
