[project]
name = "bf6-vehicle-respawn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "playsound==1.2.2",
]

[project.scripts]
bf6-vehicle-respawn = "bf6_vehicle_respawn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
