[project]
name = "battlefield-respawn-notifier"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "playsound==1.2.2",
]

[project.scripts]
bf6-vehicle-respawn = "battlefield_respawn_notifier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
